# www

./: Cargo.toml  Dockerfile  build.rs  input.css  mise.toml
.github/actions/: docker_build_and_push.yaml
.github/workflows/: docker_build_and_push.yml
posts/: 2019-vim-tips.md  2025-gl-demo.md  2025-homelab-1.md  2025-homelab-sec-vuln.md  2025-why-gl.md  2025-zsh-zle-fzf.md
src/: main.rs
static/: 2025-homelab-1.md
