[package]
name = "www"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
maud = { version = "0.27.0", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "debug-embed"] }
mime_guess = "2.0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["derive"] }
pulldown-cmark = "0.13.0"
chrono = "0.4.42"
lazy_static = "1.5.0"
serde_json = "1.0.145"

